--- a/responsiveHero/css/style.css
+++ b/responsiveHero/css/style.css
@@ -7,7 +7,47 @@
     text-decoration: none;
 }
 
+header{
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding: 33px 9%;
+    background: transparent;
 
-body {
-    background: pink;
 }
+body{
+    background-color: green;
+}
+
+.logo{
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+}
+
+.navlist{
+    display: flex; /* aligns the children horizontally */
+
+}
+
+.navlist a {
+
+    color: white;
+    margin-left: 60px;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: all .55s ease;
+}
+
+.navlist a:hover{
+    border-bottom: 2px solid white;
+}
+
+#menu-icon{}
+
