--- a/responsiveHero/css/style.css
+++ b/responsiveHero/css/style.css
@@ -49,5 +49,11 @@ body{
     border-bottom: 2px solid white;
 }
 
-#menu-icon{}
+#menu-icon{
+    color: white;
+    font-size: 30px;
+    z-index: 10001;
+    cursor: pointer;
+    display: none;
+}
 
